# realtime-translator

./: .gitignore  README.md  assist-minutes-plan.md  council-review-report.md  header-label-optimization-plan.md  llm-council-review-spec.json  openai-openrouter-support-plan.md  pyproject.toml  realtime-translator-perf-plan.md  record-strategy-controller-plan.md  requirements.txt  response-speedup-plan.md  review-fixes-plan.md  review-fixes-v2-plan.md  settings-window-refactor-plan.md  start.bat  translator.py  worker-queue-fixes-plan.md
.codex-review/hidden-risk-20260320-1/: hidden-risk-output.md  (+1 more)
realtime_translator/: __init__.py  __main__.py  api.py  app.py  assist.py  audio.py  audio_utils.py  auto_direction.py  config.py  constants.py  controller.py  devices.py  history.py  main_controls_panel.py  openai_llm.py  openai_stt.py  prompts.py  record_strategies.py  retranslation.py  settings_window.py  stream_modes.py  tools_panel.py  translation_postprocess.py  translation_timeline_panel.py  ui_state.py  unit_tables.py  vad.py  whisper_stt.py  worker_utils.py  workspace_panel.py
tests/: test_api.py  test_assist.py  test_audio.py  test_config.py  test_controller.py  test_devices.py  test_history.py  test_imports.py  test_integration.py  test_main_controls_panel.py  test_openai_llm.py  test_openai_stt.py  test_prompts.py  test_record_strategies.py  test_retranslation.py  test_stream_modes.py  test_tools_panel.py  test_translation_postprocess.py  test_translation_timeline_panel.py  test_ui_state.py  test_whisper_stt.py  test_worker_utils.py  test_workspace_panel.py
(+110 files in other folders)
