[project]
name = "realtime-translator"
version = "1.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
openai = ["openai>=1.0"]
whisper = ["faster-whisper>=1.0.0"]
vad = ["webrtcvad>=2.0.10"]
all = [
    "openai>=1.0",
    "faster-whisper>=1.0.0",
    "webrtcvad>=2.0.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
